--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -1,1 +1,56 @@
-<h2>Hello, Django! <h2>
+{% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+  <title>코스토랑</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href={% static "myapp/css/style.css" %}>
+</head>
+<body>
+  <div> July 16, 2020 </div>
+  <hr/>
+
+  <h1>코스토랑</h1>
+  <h2>넌 코딩할때가 제일 이뻐</h2>
+  
+  <div class="food-container">
+
+    <div class="food">
+      <img src={% static "myapp/images/chicken.jpg" %} width="300px" height="200px"/>
+      <div class="info">
+        <h3>코딩에 빠진 닭</h3>
+        <P>주머니가 가벼운 당신의 마음까지 생각한 가격!</p>
+        <a href="#">메뉴 보기</a>
+      </div>
+    </div>
+    
+    <div class="food">
+      <img src={% static "myapp/images/shshi.jpg" %} width="300px" height="200px"/>
+      <div class="info">
+        <h3>코코스시</h3>
+        <P>주머니가 가벼운 당신의 마음까지 생각한 가격!</p>
+        <a href="#">메뉴 보기</a>
+      </div>
+    </div>
+    
+    <div class="food">
+      <img src={% static "myapp/images/burger.jpg" %} width="300px" height="200px"/>
+      <div class="info">
+        <h3>코데리아</h3>
+        <P>주머니가 가벼운 당신의 마음까지 생각한 가격!</p>
+        <a href="#">메뉴 보기</a>
+      </div>
+    </div>
+    
+    <div class="food">
+      <img src={% static "myapp/images/bibimbap.jpg" %} width="300px" height="200px"/>
+      <div class="info">
+        <h3>코가네</h3>
+        <P>주머니가 가벼운 당신의 마음까지 생각한 가격!</p>
+        <a href="#">메뉴 보기</a>
+      </div>
+    </div>
+    
+  </div>
+</body>
+</html>
